# template

./: .AGENTS.md  .CLAUDE.md  .README.md  .bandit.yml  .codespellrc  .coveragerc  .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlint  .markdownlint.yml  .pre-commit-config.yaml  .prettierrc  .pylintrc  .readthedocs.yaml  .ruff.toml  .template-profile.sh  .yamlfmt  .yamllint  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README_template.md  _typos.toml  cliff.toml  environment.yml  manifest.txt  noxfile.py  pyproject.toml  setup.sh  test_setup.sh
.cursor/commands/: atomic-commits.md
.cursor/skills/atomic-commits/: SKILL.md
.delete_me/: _pyproject.toml
.gitconfigs/: alias  hooks
.githooks/: .gitignore  archive-utils.sh  commit-msg  prepare-commit-msg
.github/: .copilot-instructions.md  copilot-instructions.md  dependabot.yml  release.yml
.github/actions/detect-bot-author/: action.yml
.github/instructions/: CI.instructions.md
.github/scripts/: archive-utils.sh  ci-ruff-args.sh  concat_gitignores.sh
.github/workflows/: .cache-buster  CI.yml  bot-automerge.yml  changelog-autoupdate.yml  delete-bot-branches-for-closed-prs.yml  dependabot-automerge.yml  greet-new-contributors.yml  lint-github-actions.yml  pre-commit-autoupdate-automerge.yml  pre-commit-autoupdate.yml  template-CI.yml  test-concat-gitignores.yml  test-update-unreleased.yml
.scripts/: concat_gitignores.sh
.specify/memory/: .constitution.md  constitution.md
scripts/: concat-gitignores.sh  update-unreleased.sh
scripts/tests/: test-concat-gitignores.sh  test-update-unreleased.sh
src/template/: __init__.py  core.py
tests/: test_.py
