[project]
name = "template"
version = "0.0.0"
authors = [{ name = "Michael I Chen", email = "michael.chen.0@gmail.com" }]
description = "Package description"
dependencies = []
readme = "README.md"

[project.optional-dependencies]
dev = [
    "coverage",
    "coverage-badge",
    "ipython",
    "mypy",
    "pylint",
    "pytest",
    "ruff",
    "twine",
]

# [project.scripts]
# script-name = "package.bin.script_name:main"

[project.urls]
Homepage = "https://github.com/michen00/template"

[tool.mypy]
exclude = "notebook/ | *.ipynb"
packages = ["template"]
